Do the tfstate update

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -89,18 +89,18 @@ jobs:
          AWS_SECRET_ACCESS_KEY: ${{secrets.aws_secret_access_key}}
          AWS_REGION: "eu-west-1"    
         run: AWS_SDK_LOAD_CONFIG=1 terraform init; AWS_SDK_LOAD_CONFIG=1 terraform apply -auto-approve
-    #  - name: Terraform Update Tfstate
-    #    run: |
-    #      git fetch --all
-    #      git checkout $BRANCHNAME 
-    #      git pull --all
-    #      git add .
-    #      CHANGES=$(git status --porcelain | wc -l)
-    #      if [ "$CHANGES" -gt "0" ]; then
-    #      git config --global user.name "Automated TFstate_Update"
-    #      git config --global user.email "valentin.ursu@gmail.com"
-    #      git remote set-url origin https://${{ github.actor }}:${{ secrets.GIT_TOKEN }}@github.com/${{ github.repository }}
-    #      git commit -am "Automated tfstate update"
-    #      git push
-    #      fi
+      - name: Terraform Update Tfstate
+        run: |
+          git fetch --all
+          git checkout $BRANCHNAME 
+          git pull --all
+          git add .
+          CHANGES=$(git status --porcelain | wc -l)
+          if [ "$CHANGES" -gt "0" ]; then
+          git config --global user.name "Automated TFstate_Update"
+          git config --global user.email "valentin.ursu@gmail.com"
+          git remote set-url origin https://${{ github.actor }}:${{ secrets.GIT_TOKEN }}@github.com/${{ github.repository }}
+          git commit -am "Automated tfstate update"
+          git push
+          fi
  
