--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,7 +68,7 @@ jobs:
       - name: Do the plan
         uses: hashicorp/terraform-github-actions@master
         env: 
-         TF_VAR_api_key : ${{secrets.api_key}
+         TF_VAR_api_key : ${{secrets.api_key}}
          TF_VAR_location : ${{secrets.location}}
          AWS_ACCESS_KEY_ID: ${{secrets.aws_access_key_id}}
          AWS_SECRET_ACCESS_KEY: ${{secrets.aws_secret_access_key}}
@@ -89,7 +89,7 @@ jobs:
         uses: actions/checkout@v3 
       - name: Terraform Apply Weather Lambda
         env: 
-         TF_VAR_api_key : ${{secrets.api_key}
+         TF_VAR_api_key : ${{secrets.api_key}}
          TF_VAR_location : ${{secrets.location}}
          AWS_ACCESS_KEY_ID: ${{secrets.aws_access_key_id}}
          AWS_SECRET_ACCESS_KEY: ${{secrets.aws_secret_access_key}}
