--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Terraform init
         uses: hashicorp/terraform-github-actions@master
         env:
-         TF_VAR_api_key : ${{secrets.api_key}
+         TF_VAR_api_key : ${{secrets.api_key}}
          AWS_ACCESS_KEY_ID: ${{secrets.aws_access_key_id}}
          AWS_SECRET_ACCESS_KEY: ${{secrets.aws_secret_access_key}}
          AWS_REGION: "eu-west-1"
