--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,6 +56,7 @@ jobs:
       - name: Terraform init
         uses: hashicorp/terraform-github-actions@master
         env:
+         TF_VAR_api_key : ${{secrets.api_key}}
          AWS_ACCESS_KEY_ID: ${{secrets.aws_access_key_id}}
          AWS_SECRET_ACCESS_KEY: ${{secrets.aws_secret_access_key}}
          AWS_REGION: "eu-west-1"
@@ -67,6 +68,8 @@ jobs:
       - name: Do the plan
         uses: hashicorp/terraform-github-actions@master
         env: 
+         TF_VAR_api_key : ${{secrets.api_key}}
+         TF_VAR_location : ${{secrets.location}}
          AWS_ACCESS_KEY_ID: ${{secrets.aws_access_key_id}}
          AWS_SECRET_ACCESS_KEY: ${{secrets.aws_secret_access_key}}
          AWS_REGION: "eu-west-1"
@@ -80,11 +83,14 @@ jobs:
     name: "Terraform Apply"
     runs-on: ubuntu-latest
     needs: [terraformplan]
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     steps:
       - name: Checkout
         uses: actions/checkout@v3 
       - name: Terraform Apply Weather Lambda
         env: 
+         TF_VAR_api_key : ${{secrets.api_key}}
+         TF_VAR_location : ${{secrets.location}}
          AWS_ACCESS_KEY_ID: ${{secrets.aws_access_key_id}}
          AWS_SECRET_ACCESS_KEY: ${{secrets.aws_secret_access_key}}
          AWS_REGION: "eu-west-1"    
